--- a/naregua/index.html
+++ b/naregua/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/NaReguaLogo  .svg" />
+    <link rel="icon" type="image/svg+xml" href="NaReguaLogo  .svg" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Archivo+Black&family=Public+Sans:ital,wght@0,700;1,700&display=swap" rel="stylesheet">
